It is completed physically

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product landing Page</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
+<header id="header">
+    <img src="#" alt="" id="header-img" >
+<nav id="nav-bar">
+    <link rel="stylesheet" href="#header" class="nav-link">
+    <link rel="stylesheet" href="#header-img" class="nav-link">
+    <link rel="stylesheet" href="#nav-bar" class="nav-link">
+    <!-- <link rel="stylesheet" href="" class="nav-link"> -->
+</nav>
+
+
+</header>
+<video src="#" id="video"></video>
+<form action="https://www.freecodecamp.com/email-submit)" id="form">
+    <input type="email" id="email" placeholder="Enter Tour Email" name="email" required>
+    <input type="submit" id="submit" name="submit" value="Get started">
+</form>
+</body>
+</html>
